--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,6 +1,11 @@
 authors:
   - slug: wutali
-    name: Takahiro Fujiwara
+    name: Thien
+    introduction:
+      Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
+      Python / Golang / React
+  - slug: thien
+    name: Thien
     introduction:
       Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
       Python / Golang / React
