--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "base_url": "https://thien.me",
+  "site_title": "thien",
+  "site_description": "simple blog",
   "site_keywords": [
     {
       "keyword": "Next.js"
     },
     {
-      "keyword": "Netlify"
+      "keyword": "thien"
     },
     {
       "keyword": "React"
     }
   ],
   "posts_per_page": 5,
-  "twitter_account": "@my-account",
-  "github_account": "wutali"
+  "twitter_account": "@thientxt",
+  "github_account": "thienjs"
 }
